--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -328,9 +328,9 @@
                 libraries and bus stops
             </p>
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-6 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon1.png"
                                     alt="">
@@ -340,16 +340,20 @@
                                 Advertisers can now run communication customized to locations. This will increase engagement as the communication will be shaped by relevant local insights.
                             </p>
                         </div>
-                        <div class="col-md-6 featureshover">
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f1.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="row mt-2">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-6 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 featureshover">
+                            <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon2.png"
                                     alt="">
@@ -359,16 +363,14 @@
                                 With Aflax Digital, your advertising campaign can be upgraded from a single screen to a hundred screens effortlessly.
                             </p>
                         </div>
-                        <div class="col-md-6 featureshover">
-                            <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
-                        </div>
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="row mt-2">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-6 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon3.png"
                                     alt="">
@@ -378,16 +380,20 @@
                                 One of the major weaknesses of traditional advertising platforms is the lack of accountability. But with a digital signage system like Aflax Digital, you can measure audience engagement through impressions, the number of plays, and the expected outcomes.
                             </p>
                         </div>
-                        <div class="col-md-6 featureshover">
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f3.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="row mt-2">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-6 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 featureshover">
+                            <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon4.png"
                                     alt="">
@@ -397,16 +403,14 @@
                                 Unlike newspaper ads or television, a digital signage campaign can be changed after the launch to accommodate new offers, designs, or product upgrades.
                             </p>
                         </div>
-                        <div class="col-md-6 featureshover">
-                            <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
-                        </div>
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="row mt-2">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-6 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon5.png"
                                     alt="">
@@ -416,7 +420,7 @@
                                 Digital signages allow marketers to integrate social media platforms into their communication. By being interactive, they also make it easy for customers to follow them.
                             </p>
                         </div>
-                        <div class="col-md-6 featureshover">
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f6.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
