remove border from awu

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -330,7 +330,7 @@
             <div class="row">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon1.png"
                                     alt="">
@@ -353,7 +353,7 @@
                         <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon2.png"
                                     alt="">
@@ -370,7 +370,7 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon3.png"
                                     alt="">
@@ -393,7 +393,7 @@
                         <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon4.png"
                                     alt="">
@@ -410,7 +410,7 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 border border-dark p-2 featureshover">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid" src="assets/img/AdvertisingWithUs/icon5.png"
                                     alt="">
