--- a/index.html
+++ b/index.html
@@ -476,7 +476,10 @@
                 relevant content to your customers with digital Digital menu boards. The ease of implementation means
                 you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p> -->
-              <div class="portfolio-item">
+
+                <!-- CARD HOVER -->
+
+              <!-- <div class="portfolio-item">
                 <a class="portfolio-link" href="#">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
@@ -489,7 +492,7 @@
                 <div class="portfolio-caption bg-danger text-white">
                   <div class="portfolio-caption-heading">Digital Menu Boards</div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="col-md-3 border border-dark  mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
