what we do section changed in home page

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
               create easily, manage and deploy digital content to any device, anywhere in the world.</p>
           </div>
           <div class="row mt-5" id="portfolio">
-            <div class="col-md-3 mx-md-5 m-2 p-2">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
               <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Digital Menu Board.jpg" alt="">
               </div>
@@ -477,25 +477,27 @@
                 you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p> -->
 
-                <!-- CARD HOVER -->
+              <!-- CARD HOVER -->
 
-              <!-- <div class="portfolio-item">
+              <div class="portfolio-item">
                 <a class="portfolio-link" href="#">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Digital Menu Boards <br>
-                      Drive upsells, cross-sells and average purchase amounts at point of sale by displaying dynamic and relevant content to your customers with digital Digital menu boards. The ease of implementation means you can get up and running in minutes, with minimal disruption to your store or restaurant.
+                      Drive upsells, cross-sells and average purchase amounts at point of sale by displaying dynamic and
+                      relevant content to your customers with digital Digital menu boards. The ease of implementation
+                      means you can get up and running in minutes, with minimal disruption to your store or restaurant.
                     </div>
                   </div>
-                  <img class="img-fluid" src="assets/img/p/01-full.jpg" alt="" />
+                  <img class="img-fluid" src="assets/img/NEW/Network Digital Menu boards.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
-                  <div class="portfolio-caption-heading">Digital Menu Boards</div>
+                  <div class="portfolio-caption-heading">Network Digital Menu boards</div>
                 </div>
-              </div> -->
+              </div>
             </div>
-            <div class="col-md-3 border border-dark  mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid"
                   src="assets/img/whatwedo/Intractive and Intelligent Signage.jpg" alt="">
               </div>
@@ -503,77 +505,217 @@
               <p>From place and learn and intelligent Digital menu boards to magic mirrors and touch sensor experiences,
                 Aflax
                 provides you with all the tools to build fully interactive applications and signage content with ease.
-              </p>
+              </p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      Commercial Grade Monitors <br>
+                      From place and learn and intelligent Digital menu boards to magic mirrors and touch sensor
+                      experiences, Aflax
+                      provides you with all the tools to build fully interactive applications and signage content with
+                      ease.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/Commercial Monitors.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">Commercial Grade Monitors</div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-3 border border-dark  mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+            <div class="col-md-3  mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Intractive2.jpg" alt="">
               </div>
               <h6><b>Internal Signage</b></h6>
               <p>From internal communications to reception displays you can broadcast videos or content in real-time on
                 screens. With Aflax, digital signage can instantly inform and inspire your audience which increases
-                staff engagement and productivity.</p>
+                staff engagement and productivity.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      Indoor Advertising Displays <br>
+                      From internal communications to reception displays you can broadcast videos or content in
+                      real-time on
+                      screens. With Aflax, digital signage can instantly inform and inspire your audience which
+                      increases
+                      staff engagement and productivity.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/Indoor Advertising Displays2.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">Indoor Advertising Displays</div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="row mt-5">
-            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+          <div class="row mt-5" id="portfolio">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Outdoor Signage.jpg" alt="">
               </div>
               <h6><b>Outdoor Signage</b></h6>
               <p>From roadside totems to outdoor Digital menu boards, there is a wealth of opportunity for using outdoor
                 digital
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
-                capturing new customers and raising brand awareness.</p>
+                capturing new customers and raising brand awareness.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      Outdoor Advertising Displays <br>
+                      From roadside totems to outdoor Digital menu boards, there is a wealth of opportunity for using
+                      outdoor
+                      digital
+                      signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall
+                      by
+                      capturing new customers and raising brand awareness.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/Indoor Advertising Displays2.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">Outdoor Advertising Displays</div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Video Wall.jpg" alt="">
               </div>
               <h6><b>Video Walls</b></h6>
               <p>Build video walls of virtually any size or orientation. Enjoy seamless content playback across multiple
-                screens, and even build interactive video walls and multi-screen kiosks.</p>
+                screens, and even build interactive video walls and multi-screen kiosks.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      LCD Video Wall Displays <br>
+                      Build video walls of virtually any size or orientation. Enjoy seamless content playback across
+                      multiple
+                      screens, and even build interactive video walls and multi-screen kiosks.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/LCD Video Wall Displays.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">LCD Video Wall Displays</div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Digital Self.jpg" alt="">
               </div>
               <h6><b>Digital Shelf Edge</b></h6>
               <p>Deploy promotional campaigns straight to the shelf edge. Directly influence in-store purchases with
-                product videos, dynamic pricing and offers, loyalty card incentives, online reviews and much more.</p>
+                product videos, dynamic pricing and offers, loyalty card incentives, online reviews and much more.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      Digital Self Edges <br>
+                      Deploy promotional campaigns straight to the shelf edge. Directly influence in-store purchases
+                      with
+                      product videos, dynamic pricing and offers, loyalty card incentives, online reviews and much more.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/Digital Sefl Edge.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">Digital Self <br> Edges</div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="row mt-5">
-            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+          <div class="row mt-5" id="portfolio">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Apps= Custom Project.jpg" alt="">
               </div>
               <h6><b>Custom Projects</b></h6>
               <p>Our team can deliver custom applications and creative digital experiences, bespoke to your unique
                 project requirements. Our FREE consultancy process helps us to understand who you want to communicate
                 with, what you want to say and when. We can then select the right combination of products and services
-                which provides you with a bespoke solution.</p>
+                which provides you with a bespoke solution.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      POS Android Advertising Displays <br>
+                      Our team can deliver custom applications and creative digital experiences, bespoke to your unique
+                      project requirements. Our FREE consultancy process helps us to understand who you want to
+                      communicate
+                      with, what you want to say and when.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/POS Android Advertising Displays.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">POS Android Advertising Displays</div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/IPTV = CloudBased.jpg" alt="">
               </div>
               <h6><b>Cloud Based</b></h6>
               <p>The Aflax interactive digital signage platform is an extremely intuitive digital tool which allows you
                 to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based
-                which means you don’t have to worry about downloading any software.</p>
+                which means you don’t have to worry about downloading any software.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      Ingetraged IPTV <br>
+                      The Aflax interactive digital signage platform is an extremely intuitive digital tool which allows
+                      you
+                      to easily create, edit, manage, deploy and report on digital content in real-time. It’s all
+                      cloud-based
+                      which means you don’t have to worry about downloading any software.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/Ingetraged IPTV.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">Ingetraged <br> IPTV</div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
-              <div class="text-center">
+            <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
+              <!-- <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/whatwedo/Hardware.jpg" alt="">
               </div>
               <h6><b>Hardware</b></h6>
               <p>Choose from Aflax’s Andriod compact digital signage media player that plugs directly into the back of
                 any
                 commercial screen with minimal wiring or one of our partners embedded display panels – which completely
-                removes the need for any external hardware.</p>
+                removes the need for any external hardware.</p> -->
+              <div class="portfolio-item">
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                      Self Service Kiosks <br>
+                      Choose from Aflax’s Andriod compact digital signage media player that plugs directly into the back
+                      of
+                      any
+                      commercial screen with minimal wiring or one of our partners embedded display panels – which
+                      completely
+                      removes the need for any external hardware.
+                    </div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/NEW/Self Service Kiosk.png" alt="" />
+                </a>
+                <div class="portfolio-caption bg-danger text-white">
+                  <div class="portfolio-caption-heading">Self Service <br> Kiosks</div>
+                </div>
+              </div>
             </div>
           </div>
 
