what we do updated

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                   <img class="img-fluid" src="assets/img/NEW/Digital Sefl Edge.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
-                  <div class="portfolio-caption-heading">Digital Self <br> Edges</div>
+                  <div class="portfolio-caption-heading">Digital Self Edges</div>
                 </div>
               </div>
             </div>
@@ -684,7 +684,7 @@
                   <img class="img-fluid" src="assets/img/NEW/Ingetraged IPTV.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
-                  <div class="portfolio-caption-heading">Ingetraged <br> IPTV</div>
+                  <div class="portfolio-caption-heading">Ingetraged IPTV</div>
                 </div>
               </div>
             </div>
@@ -713,7 +713,7 @@
                   <img class="img-fluid" src="assets/img/NEW/Self Service Kiosk.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
-                  <div class="portfolio-caption-heading">Self Service <br> Kiosks</div>
+                  <div class="portfolio-caption-heading">Self Service Kiosks</div>
                 </div>
               </div>
             </div>
