what we do images changed

--- a/index.html
+++ b/index.html
@@ -462,9 +462,15 @@
         <div class="row content">
           <div>
             <h2 class="text-center text-uppercase text-danger fw-bold">WHAT WE DO</h2>
-            <p class="text-center">Our cloud-based interactive digital signage software platform gives users the ability
-              to
-              create easily, manage and deploy digital content to any device, anywhere in the world.</p>
+            <p class="text-center">
+              Our cloud-based interactive digital signage platform allows us to create, manage and deploy digital
+              content to any device, anywhere in the world. From internal communications to reception displays
+              Whatever your sector, Aflax Digital Signage will ensure that the desire audience never misses a message
+              with our complete digital signage communications integrating with LCD screens in reception, corridors,
+              meeting room, digital menu board for quick service restaurants ( QSR), collaborative whiteboard and
+              collaborative board messaging (Clevertouch).
+              With our Solution you can broadcast videos or content in real-time on screens.
+            </p>
           </div>
           <div class="row mt-5" id="portfolio">
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
@@ -517,7 +523,7 @@
                       ease.
                     </div>
                   </div>
-                  <img class="img-fluid" src="assets/img/NEW/Commercial Monitors.png" alt="" />
+                  <img class="img-fluid" src="assets/img/wwd2/Commercial Display.PNG" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
                   <div class="portfolio-caption-heading">Commercial Grade Monitors</div>
@@ -544,7 +550,7 @@
                       staff engagement and productivity.
                     </div>
                   </div>
-                  <img class="img-fluid" src="assets/img/NEW/Indoor Advertising Displays2.png" alt="" />
+                  <img class="img-fluid" src="assets/img/wwd2/Indoor Advertising Displays.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
                   <div class="portfolio-caption-heading">Indoor Advertising Displays</div>
@@ -576,7 +582,7 @@
                       capturing new customers and raising brand awareness.
                     </div>
                   </div>
-                  <img class="img-fluid" src="assets/img/NEW/Indoor Advertising Displays2.png" alt="" />
+                  <img class="img-fluid" src="assets/img/wwd2/Outdoor Digital Advertising Displays.jpg" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
                   <div class="portfolio-caption-heading">Outdoor Advertising Displays</div>
@@ -710,7 +716,7 @@
                       removes the need for any external hardware.
                     </div>
                   </div>
-                  <img class="img-fluid" src="assets/img/NEW/Self Service Kiosk.png" alt="" />
+                  <img class="img-fluid" src="assets/img/wwd2/Self serf Kiosk.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
                   <div class="portfolio-caption-heading">Self Service Kiosks</div>
