bg-color changed

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
 
     <!-- ======= Features Section ======= -->
-    <section class="about white-smoke">
+    <section class="about sky-blue">
       <div class="container">
         <div class="row content text-center" id="howItWorks">
           <h2 class="text-uppercase text-danger fw-bold">WHY WITH US</h2>
@@ -391,7 +391,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= How it works Section ======= -->
-    <section class="about">
+    <section class="about white-smoke">
       <div class="container">
 
         <div class="row content">
@@ -456,7 +456,7 @@
     </section><!-- End How it works Section -->
 
     <!-- ======= What we do Section ======= -->
-    <section class="about white-smoke">
+    <section class="about">
       <div class="container">
 
         <div class="row content">
