new images added

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -181,7 +181,7 @@
 
                 <!-- Slide 1 -->
                 <div class="carousel-item active mt-5"
-                    style="background-image: url(assets/img/AdvertisingWithUs/1.png)">
+                    style="background-image: url(assets/img/awu-sliders/Averise-header-1.png)">
                     <div class="carousel-container mt-5">
                         <div class="container mt-5">
                             <h2 class="animate__animated animate__fadeInDown mt-5">
@@ -198,12 +198,12 @@
                 </div>
 
                 <!-- Slide 2 -->
-                <div class="carousel-item mt-5" style="background-image: url(assets/img/AdvertisingWithUs/2.jpg)">
+                <div class="carousel-item mt-5" style="background-image: url(assets/img/awu-sliders/For\ Out-Of-Home\ Advertising\,.png)">
                     <div class="carousel-container mt-5">
                         <div class="container mt-5">
                             <h2 class="animate__animated animate__fadeInDown mt-5">
                                 With our Scheduling playlist, we will easily set times of the day, the days of the week
-                                and the months of the year to display ads
+                                and the months of the year
                             </h2>
                             <!-- <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
                 great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
@@ -245,7 +245,7 @@
         </div>
 
         <!-- ======= How it works Section ======= -->
-        <section class="about">
+        <section class="about mt-5">
             <div class="container">
 
                 <div class="row content">
@@ -317,7 +317,7 @@
         </section>
         <!-- End How it works Section -->
 
-        <div class="container">
+        <div class="container mt-5">
             <h2 class="text-uppercase text-center text-danger fw-bold">Advantages to Your Advertising Campaigns</h2>
             <p class="text-center">
                 Our digital signage advertising network contains collection of digital signs that display image, video,
@@ -1594,7 +1594,7 @@
         <!-- End Clients Section -->
 
         <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact">
+        <section id="contact" class="contact mt-5">
             <div class="container">
                 <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US
                             TODAY</span></b></h2>
@@ -1686,7 +1686,7 @@
     </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
+    <footer id="footer" class="mt-5">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
