--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                       removes the need for any external hardware.
                     </div>
                   </div>
-                  <img class="img-fluid" src="assets/img/wwd2/Self serf Kiosk.png" alt="" />
+                  <img class="img-fluid" src="assets/img/new/Self Kiosk.png" alt="" />
                 </a>
                 <div class="portfolio-caption bg-danger text-white">
                   <div class="portfolio-caption-heading">Self Service Kiosks</div>
